# kpolynomials

./: CMakeLists.txt  LICENSE  README.md
src/gui/: Window.cpp  Window.hpp
src/kpoly/: Application.cpp  Global.hpp  Parser.cpp  Parser.hpp  Polynomial.cpp  Polynomial.hpp
